fix styling, spacing

--- a/portfolio/src/main/webapp/about.css
+++ b/portfolio/src/main/webapp/about.css
@@ -1,10 +1,12 @@
 .font {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .link {
     color: white;
-} :hover {
+} 
+
+link:hover {
     color: black;
 }
 
@@ -19,9 +21,13 @@
   margin-right: 20%;
   font-size: 20px;
   text-align: center;
-} div {
+} 
+
+.abt-content div {
     margin-top: 20px;
-} p {
+} 
+
+.abt-content p {
     margin-top: 5px;
     font-size: 16px;
 }
